// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile: Main 1`] = `
Object {
  "body": Array [],
  "category": 0,
  "nodeType": 0,
  "position": Object {
    "col": 0,
    "file": "file",
    "line": 0,
    "offset": 0,
  },
  "stack": Map {},
  "variables": Map {},
}
`;

exports[`Parser-Lexer: Main 1`] = `
Object {
  "body": Array [],
  "category": 0,
  "nodeType": 0,
  "position": Object {
    "col": 0,
    "file": "file",
    "line": 0,
    "offset": 0,
  },
}
`;
